# nutritionix_mcp

./: .gitignore  README.md  app.py  config.json  llm.py  llm_provider.py  mcp_client.py  orchestrator.py  pyproject.toml  server.py  todo.txt
chat-frontend/: package-lock.json  package.json
chat-frontend/public/: index.html
chat-frontend/src/: App.js
frontend/: chat.py
nutritionix_mcp/: config.py  main.py
nutritionix_mcp/tools/: get_nutrients.py  search_food.py
nutritionix_mcp/utils/: http_client.py  units.py
tests/: test_get_nutrients.py  test_search_food.py
